test-sequential-run.log
> Task :clean

> Task :compileJava
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

> Task :processResources
> Task :classes

> Task :compileTestJava FAILED
/Users/jsb/hanghe-plus/ecommerce/src/test/java/io/hhplus/ecommerce/application/usecase/coupon/IssueCouponConcurrencyTest.java:25: error: cannot find symbol
@Import(TestContainersConfig.class)
 ^
  symbol: class Import
1 error

[Incubating] Problems report is available at: file:///Users/jsb/hanghe-plus/ecommerce/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /Users/jsb/hanghe-plus/ecommerce/src/test/java/io/hhplus/ecommerce/application/usecase/coupon/IssueCouponConcurrencyTest.java:25: error: cannot find symbol
  @Import(TestContainersConfig.class)
   ^
    symbol: class Import
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.14.3/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
4 actionable tasks: 4 executed
